Add arXiv paper link (2512.12984)

--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
               <div class="publication-links">
                 <!-- arXiv Link -->
                 <span class="link-block">
-                  <a href="#" class="external-link button is-normal is-rounded is-dark">
+                  <a href="https://arxiv.org/abs/2512.12984" class="external-link button is-normal is-rounded is-dark">
                     <span class="icon">
                       <i class="ai ai-arxiv"></i>
                     </span>
@@ -790,7 +790,7 @@
       <pre><code>@article{lu2025vorolight,
   title={VoroLight: Learning Quality Volumetric Voronoi Meshes from General Inputs},
   author={Lu, Jiayin and Jiang, Ying and Yang, Yin and Jiang, Chenfanfu},
-  journal={arXiv preprint arXiv:XXXX.XXXXX},
+  journal={arXiv preprint arXiv:2512.12984},
   year={2025}
 }</code></pre>
     </div>
