--- a/index.html
+++ b/index.html
@@ -140,6 +140,15 @@
                     <span>Code (Coming Soon)</span>
                   </a>
                 </span>
+                <!-- 3D Models Link -->
+                <span class="link-block">
+                  <a href="https://www.thingiverse.com/thing:7238281" target="_blank" class="external-link button is-normal is-rounded is-dark">
+                    <span class="icon">
+                      <i class="fas fa-lightbulb"></i>
+                    </span>
+                    <span>Printable Lamp Models</span>
+                  </a>
+                </span>
               </div>
             </div>
           </div>
